--- a/sass/components/_feedback-form.scss
+++ b/sass/components/_feedback-form.scss
@@ -117,8 +117,8 @@
   &__terms-label {
     position: relative;
 
-    display: inline-block;
-    padding-left: 24px;
+    display: inline;
+    padding-left: 21px;
 
     cursor: pointer;
 
